スタイルシートの修正

--- a/template/OPS/css/horizontal.css
+++ b/template/OPS/css/horizontal.css
@@ -241,6 +241,7 @@ h4,
 h5,
 h6 {
 font-family: serif-ja, serif;
+}
 /* フォント指定
 ---------------------------------------------------------------- */
 /* 明朝 */
