--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -344,7 +344,7 @@ font-family: serif-ja-v, serif-ja, serif;
 .font-0em83 { font-size: 0.83em; }
 .font-0em77 { font-size: 0.77em; }
 .font-0em66 { font-size: 0.66em; }
-.font-0em62 { font-size: 0.62em; }}
+.font-0em62 { font-size: 0.62em; }
 
 
 /* 縦中横 */
