--- a/template/OPS/css/vertical.css
+++ b/template/OPS/css/vertical.css
@@ -267,7 +267,66 @@ text-emphasis-position: under;
 -epub-text-emphasis-position: under;
 }
 
-/* 傍線 */
+
+
+
+/*縦書き 打ち消し線
+---------------------------------------------------------------- */
+.line-through {
+  text-decoration: line-through;
+}
+
+/* 【縦組み】右線 */
+.em-line {
+text-decoration: overline;
+}
+/* 【縦組み】左線 */
+.em-line-outside {
+text-decoration: underline;
+}
+/* 【縦組み】二重線 */
+double_underline {
+text-decoration:overline double;
+}
+/* 【縦組み】鎖線 */
+dotted_underline {
+text-decoration:overline dotted;
+}
+/* 【縦組み】破線 */
+dashed_underline {
+text-decoration:overline dashed;
+}
+/* 【縦組み】波線 */
+wave_underline {
+text-decoration:overline wavy;
+}
+/* 【縦組み】赤線 */
+line-red {
+text-decoration:overline red;
+}
+/* 【縦組み】左に二重傍線 */
+left_double_underline {
+text-decoration:underline double;
+}
+/* 【縦組み】左に鎖線 */
+left_dotted_underline {
+text-decoration:underline dotted;
+}
+/* 【縦組み】左に破線 */
+left_dashed_underline {
+text-decoration:underline dotted;
+}
+/* 【縦組み】左に波線 */
+left_wave_underline {
+text-decoration:underline wavy;
+}
+/* 【縦組み】左に赤線 */
+left-line-red {
+text-decoration:underline red;
+}
+
+
+/* 傍線
 span.underline, span.double_underline, span.dotted_underline, span.dashed_underline, span.wave_underline {
 border-right-width: 1px;
 padding-right: 1px;
@@ -286,13 +345,15 @@ span.dashed_underline {
 border-right-style: dashed;
 }
 span.wave_underline {
-border-right-style: solid;/*wave;*/
+border-right-style: solid;
 }
 span.left_underline {
 border-left-style: solid;
 padding-left: 1px;
 border-left-width: 1px;
 }
+
+*/
 
 
 /*AozoraEpubで使わない*/
