--- a/template/OPS/xhtml/cover.vm
+++ b/template/OPS/xhtml/cover.vm
@@ -3,12 +3,9 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:xml="http://www.w3.org/XML/1998/namespace" xml:lang="ja" lang="ja">
 
 <head>
-#if (${svgImage})
+#if (${bookInfo.ImageOnly})
 <meta name="viewport" content="width=${coverImage.Width}, height=${imageInfo.OutHeight}"/>
 	<link rel="stylesheet" type="text/css" href="../css/fixed-layout-jp.css"/>
-#elseif (${kindle} && ${bookInfo.ImageOnly})
-<meta name="viewport" content="width=${coverImage.Width}, height=${imageInfo.OutHeight}"/>
-	<link rel="stylesheet" type="text/css" href="../css/kindle_image.css"/>
 #elseif (${bookInfo.Vertical})
 	<link rel="stylesheet" type="text/css" href="../css/vertical_image.css"/>
 #else
@@ -20,7 +17,7 @@
 
 </head>
 
-#if (${svgImage})
+#if (${bookInfo.ImageOnly})
 <body>
 <div>
 <svg xmlns="http://www.w3.org/2000/svg" version="1.1" xmlns:xlink="http://www.w3.org/1999/xlink" width="100%" height="100%" viewBox="0 0 ${coverImage.Width} ${coverImage.Height}">
