--- a/template/OPS/package.vm
+++ b/template/OPS/package.vm
@@ -50,6 +50,10 @@
 		<item id="v_middle" href="css/vertical_middle.css" media-type="text/css"/>
 		<item id="v_image" href="css/vertical_image.css" media-type="text/css"/>
 		<item id="fixed-layout-jp" href="css/fixed-layout-jp.css" media-type="text/css"/>
+		<item id="book-style" href="css/book-style.css" media-type="text/css"/>
+		<item id="style-reset" href="css/style-reset.css" media-type="text/css"/>
+		<item id="style-standard" href="css/style-standard.css" media-type="text/css"/>
+		<item id="style-advance" href="css/style-advance.css" media-type="text/css"/>
 
 #else
 		<item id="horizontal" href="css/horizontal.css" media-type="text/css"/>
